# Mesuem-Arts

./: .gitignore  ANTI_HALLUCINATION_GUIDE.md
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/app/utils/: vision.py
backend/scripts/: seed_db.py
database/: migration_add_verification.sql  schema.sql
frontend/: App.tsx  app.json  package-lock.json  package.json
frontend/.expo/prebuild/: cached-packages.json
frontend/app/: _layout.tsx  index.tsx
frontend/app/scan/: index.tsx
frontend/src/components/: Onboarding.tsx  ResultCard.tsx
frontend/src/screens/: ScanScreen.tsx
frontend/src/theme/: colors.ts  index.ts  typography.ts
